# scratch-clone

./: CMakeLists.txt  README.md  UML.mdj
business/: CMakeLists.txt
business/include/: Character.hpp  CharacterManager.hpp  DataType.hpp  Game.hpp  SymbolTable.hpp  Time.hpp  Value.hpp
business/include/Commands/: BaseExpression.hpp  Command.hpp  CommandPart.hpp  CommandSet.hpp  Constant.hpp  Expression.hpp  IExpression.hpp  Instruction.hpp  InstructionWithExpressions.hpp  InstructionWithSubScript.hpp  Script.hpp  ScriptExecution.hpp
business/include/Commands/CommandSet/: MoveStepsInstruction.hpp
business/include/DTOs/: DTO.hpp  Sections.hpp
business/include/Events/: Event.hpp  EventBroker.hpp  EventType.hpp  KeyboardEvent.hpp  SignalEvent.hpp
business/include/Instructions/: Instruction.hpp  InstructionPart.hpp  InstructionParts.hpp  InstructionSet.hpp  InstructionStack.hpp  InstructionWithStack.hpp  InstructionWithValues.hpp
business/include/Instructions/InstructionSet/: MoveStepsInstruction.hpp
business/include/Utils/: Event.hpp  Observable.hpp  Observer.hpp  Vector.hpp
business/src/: Character.cpp  Game.cpp
business/src/Commands/: Command.cpp  CommandSet.cpp  Constant.cpp  Expression.cpp  IExpression.cpp  Instruction.cpp  InstructionWithExpressions.cpp  ScriptExecution.cpp
business/src/Commands/CommandSet/: MoveStepsInstruction.cpp
business/src/DTOS/: Sections.cpp
business/src/DTOs/: Sections.cpp
business/src/Instructions/: Instruction.cpp  InstructionSet.cpp  InstructionStack.cpp  InstructionWithStack.cpp  InstructionWithValues.cpp
business/src/Instructions/InstructionSet/: MoveStepsInstruction.cpp
business/src/Utils/: Observable.cpp
presentation/: CMakeLists.txt
presentation/include/: App.hpp  AppWindow.hpp  Widget.hpp
presentation/include/Data/: EventData.hpp  RenderData.hpp  UpdateData.hpp
presentation/include/Debug/: DebugRect.hpp
presentation/include/Interfaces/: Hoverable.hpp  Observable.hpp  Observer.hpp
presentation/include/Precompiled/: header.hpp
presentation/include/Timer/: Timer.hpp
presentation/include/Utils/: BorderRectangle.hpp  Button.hpp  ButtonConfig.hpp  Center.hpp  Column.hpp  Container.hpp  EdgeInsets.hpp  FontFactory.hpp  GridView.hpp  Input.hpp  NumericalInput.hpp  Padding.hpp  RectangularBorder.hpp  Row.hpp  Text.hpp  TextBuilder.hpp  TextController.hpp  WidgetList.hpp  WidgetListBuilder.hpp  WithBackground.hpp
presentation/include/Views/: CommandView.hpp  SectionInstructionSetView.hpp
presentation/include/Widgets/: InstructionSetView.hpp  SectionInstructionSetView.hpp  SectionsWidget.hpp
presentation/src/: App.cpp  AppWindow.cpp  Widget.cpp
presentation/src/Debug/: DebugRect.cpp
presentation/src/Interfaces/: Hoverable.cpp
presentation/src/Timer/: Timer.cpp
presentation/src/Utils/: BorderRectangle.cpp  Button.cpp  Center.cpp  Column.cpp  Container.cpp  EdgeInsets.cpp  FontFactory.cpp  GridView.cpp  Input.cpp  NumericalInput.cpp  Padding.cpp  RectangularBorder.cpp  Row.cpp  Text.cpp  TextBuilder.cpp  WidgetList.cpp  WidgetListBuilder.cpp  WithBackground.cpp
presentation/src/Views/: CommandView.cpp  SectionInstructionSetView.cpp
presentation/src/Widgets/: InstructionSetView.cpp  SectionsWidget.cpp
src/: main.cpp
utils/: CMakeLists.txt
utils/include/: Event.hpp  Observable.hpp  Observer.hpp  Vector.hpp
utils/src/: Observable.cpp
